--- a/exercises/exercise_1_12/Dockerfile
+++ b/exercises/exercise_1_12/Dockerfile
@@ -6,10 +6,10 @@ WORKDIR /usr/src/app
 
 COPY example-frontend/ .
 
-RUN npm install
+ENV REACT_APP_BACKEND_URL=http://localhost:8080
 
+RUN npm install 
 RUN npm run build
-
 RUN npm install -g serve
 
 CMD serve -s -l 5000 build
